# uKOS-X-IWYU

./: .clangd  .gitattributes  .gitignore  LICENSE.md  README.md  Work_done_todo.md  privileged.xmind
,LICENSES/: License_LVGL.txt  License_uKOS-X.txt
Applications/Mkfiles/: application.mk  common.mk  gcc_application_CORTEX_M3.mk  gcc_application_CORTEX_M33.mk  gcc_application_CORTEX_M4.mk  gcc_application_CORTEX_M55.mk  gcc_application_CORTEX_M7.mk  gcc_application_RV32IMAC.mk  gcc_application_RV64IMAFDC.mk  llvm_application_CORTEX_M3.mk  llvm_application_CORTEX_M33.mk  llvm_application_CORTEX_M4.mk  llvm_application_CORTEX_M55.mk  llvm_application_CORTEX_M7.mk  (+1 more)
Documentation/: uKOS-X_RTOS.html
Ports/Targets/DevKit_nRF5340/Variant_Test_Net/: CMakeLists.txt
Ports/Targets/DevKit_nRF5340/Variant_Test_Net/Includes/Board/: board.h
Ports/Targets/DevKit_nRF5340/Variant_Test_Net/Processes/startUp/: stub_startUp.c
Ports/Targets/DevKit_nRF5340/Variant_Test_Net/Runtime/: clockTree.h  init.c
Ports/Targets/DevKit_nRF5340/Variant_Test_Net/System/: makefile  ozone_config.jdebug
Ports/Targets/Discovery_U5G9/Variant_Test/: CMakeLists.txt
Ports/Targets/Discovery_U5G9/Variant_Test/Includes/Board/: board.h
Ports/Targets/Discovery_U5G9/Variant_Test/Processes/TinyUSB/: stub_TinyUSB.c
Ports/Targets/Discovery_U5G9/Variant_Test/Processes/startUp/: stub_startUp.c
Ports/Targets/Discovery_U5G9/Variant_Test/Runtime/: clockTree.h  init.c
Ports/Targets/Discovery_U5G9/Variant_Test/System/: makefile
Third_Parties/FatFs/: .gitignore  CMakeLists.txt  README.md  build.sh
Third_Parties/FatFs/uKOS_System/: diskio.c  ffconf.h  headerFatFs.c
Third_Parties/IntelRDFPMath/: .gitignore  CMakeLists.txt  README.md  build.sh
Third_Parties/IntelRDFPMath/uKOS_System/: headerIntelRDFPMath.c
Third_Parties/MicroPython/: .gitignore  CMakeLists.txt  MicroPython.xmind  build.sh  build_with_cmake.sh
Third_Parties/MicroPython/uKOS_Interface/: user_modules.cmake
Third_Parties/MicroPython/uKOS_Interface/example/: example.c  micropython.cmake  micropython.mk
Third_Parties/MicroPython/uKOS_Interface/led/: led.c  micropython.cmake  micropython.mk
Third_Parties/MicroPython/uKOS_Interface/serial/: micropython.cmake  micropython.mk  serial.c
Third_Parties/MicroPython/uKOS_Interface/switch/: micropython.cmake  micropython.mk  switch.c
Third_Parties/MicroPython/uKOS_System/: headerMicroPython.c  help.c  microPython.c  microPython.h
Third_Parties/TinyUSB/: .gitignore  CMakeLists.txt  README.md  TinyUSB.xmind  build.sh  build_with_cmake.sh  core.yaml
Third_Parties/TinyUSB/uKOS_Interface/Descriptors/cdc_cdc/: usb_descriptors.c
Third_Parties/TinyUSB/uKOS_Interface/Descriptors/cdc_msc/: usb_descriptors.c
Third_Parties/TinyUSB/uKOS_Interface/Descriptors/cdc_video/: usb_descriptors.c
Third_Parties/TinyUSB/uKOS_Interface/Descriptors/video/: usb_descriptors.c  usb_descriptors.h
Third_Parties/TinyUSB/uKOS_Interface/Includes/mcu/st/: stm32f2xx.h  stm32h7xx.h  stm32l4xx.h  stm32n6xx.h  stm32u5xx.h
Third_Parties/TinyUSB/uKOS_Interface/Models/: model_TinyUSB_cdc.c_inc  model_TinyUSB_msc.c_inc  model_TinyUSB_video.c_inc
Third_Parties/TinyUSB/uKOS_Interface/OSAL/: tusb_os_custom.c  tusb_os_custom.h
Third_Parties/TinyUSB/uKOS_Interface/Patches/mcu/raspberrypi/pico2/: dcd_rp2040.c
Third_Parties/TinyUSB/uKOS_System/: headerTusb.c
Third_Parties/decnumber/: .gitignore  CMakeLists.txt  README.md  build.sh
Third_Parties/decnumber/uKOS_Interface/Patches/: config.h  gstdint.h
Third_Parties/decnumber/uKOS_System/: headerdecnumber.c
Tools/TestRom/MAiXDUiNO_K210_RV64IMAFDC/: CMakeLists.txt  README.md  burn.sh  clockTree.h  cmns.c  exce.c  first.c  init.c  makefile  tests.c  tests_00.c  tests_01.c  tests_03.c  tests_04.c  tests_05.c  tests_06.c  tests_07.c  tests_08.c  tests_09.c  tests_10.c  tests_11.c  tests_12.c  tests_13.c  tests_14.c  tests_15.c  tests_16.c  tests_17.c  tests_18.c  tests_19.c  tests_20.c
Tools/TestRom/MAiXDUiNO_K210_RV64IMAFDC/Includes/: board.h  tests.h
Tools/TestRom/MAiXDUiNO_K210_RV64IMAFDC/Includes/Core/: core.h  core_reg.h  macros_core.h
Tools/TestRom/MAiXDUiNO_K210_RV64IMAFDC/Includes/Core/Registers/: rv64_csr.h
Tools/TestRom/MAiXDUiNO_K210_RV64IMAFDC/Includes/SOC/: macros_soc.h  soc_reg.h
Tools/TestRom/MAiXDUiNO_K210_RV64IMAFDC/Includes/SOC/Registers/: K210_dmac.h  K210_dvp.h  K210_gpio.h  K210_spi.h  K210_sysctl.h  K210_timer.h  K210_uart.h  soc_vectors.h
Tools/TestRom/MAiXDUiNO_K210_RV64IMAFDC/Runtime/: K210.ld  link_p.ld  link_p.lld  system_p.ld  vectors.S
Tools/TestRom/Nucleo_N657_Cortex-M55/: CMakeLists.txt  burn.sh  clockTree.h  cmns.c  first.c  init.c  makefile  ozone_config.jdebug  tests.c  tests_00.c  tests_01.c  tests_02.c  tests_04.c  tests_05.c  tests_06.c  tests_07.c  tests_08.c  tests_09.c  tests_10.c  tests_11.c  tests_12.c
Tools/TestRom/Nucleo_N657_Cortex-M55/Includes/: board.h  tests.h
Tools/TestRom/Nucleo_N657_Cortex-M55/Includes/Core/: core.h  macros_core.h  macros_core_stackFrame.h
Tools/TestRom/Nucleo_N657_Cortex-M55/Includes/Core/Registers/: core_addendum.h  nvic.h  scb.h
Tools/TestRom/Nucleo_N657_Cortex-M55/Includes/SOC/: macros_soc.h
Tools/TestRom/Nucleo_N657_Cortex-M55/Includes/SOC/Registers/: soc_addendum.h  soc_vectors.h  soc_vectors.inc  stm32N657_adc.h  stm32N657_adc12.h  stm32N657_adf.h  stm32N657_bsec.h  stm32N657_cacheaxi.h  stm32N657_crc.h  stm32N657_cryp.h  stm32N657_csi.h  stm32N657_dcmi.h  stm32N657_dcmipp.h  stm32N657_dlybsd.h  stm32N657_dts.h  stm32N657_exti.h  stm32N657_fdcan.h  stm32N657_gfxmmu.h  stm32N657_gfxtim.h  stm32N657_gpdma.h  stm32N657_gpio.h  stm32N657_gpiob.h  stm32N657_gpioc.h  stm32N657_gpiod.h  stm32N657_gpioe.h  stm32N657_gpiof.h  stm32N657_gpiog.h  stm32N657_gpioh.h  stm32N657_gpion.h  stm32N657_gpioo.h  stm32N657_gpiop.h  stm32N657_gpioq.h  stm32N657_hash.h  stm32N657_hdp.h  stm32N657_hpdma.h  stm32N657_i2c.h  stm32N657_i3c.h  stm32N657_icache.h  stm32N657_iwdg.h  stm32N657_lptim.h  (+43 more)
Tools/TestRom/Nucleo_N657_Cortex-M55/Runtime/: STM32N657xD.ld  link_p.ld  model_cache.c_inc  system_p.ld
(+3285 files in other folders)
